# zx-spectrum-coprocessor

./: .gitignore  README.md
firmware/: CMakeLists.txt  cmd.c  cmd.h  cmd_immediate.c  cmd_immediate.h  dma_engine.c  dma_engine.h  gpios.h  int_counter.pio  int_unsafe.pio  rom.h  rom_emulation.c  rom_emulation.h  trace_table.c  trace_table.h  z80_image.h  z80_test_image.c  z80_test_image.h  zx_copro.c  zx_copro.h  zx_memory_management.c  zx_memory_management.h  zx_mirror.c  zx_mirror.h
pcb/: zx-spectrum-coprocessor.kicad_pcb  zx-spectrum-coprocessor.kicad_prl  zx-spectrum-coprocessor.kicad_sch
test/logic_analyser_captures/contended_failure/: contended.lac  notes.txt
test/logic_analyser_captures/dma_corruption/: dma_corruption.lac  notes.txt
test/logic_analyser_captures/no_alarm_2byte_dma/: no_alarm_2byte_dma.lac  notes.txt
test/logic_analyser_captures/zx_glitch_2byte_dma/: notes.txt  zx_crash_cap_2byte_dma.lac
test/spectrum/common/: cmd.c  cmd.h  dma.h  zx_copro.h
test/spectrum/hello_world/: z80_image.c
test/spectrum/memset/: contended_note.txt  memset.c  memset_isr.c
test/spectrum/pxy2saddr/: pxy2saddr.c
